added simulate to the test rig, cleaned up the caching concurrent modification errors, added one more transaction the new way
git-svn-id: https://source.sakaiproject.org/contrib/muse/mneme/trunk@4380 fdecad78-55fc-0310-b1b2-d7d25cf747c9